# ado-template-tracker

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  guide.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  taskfile.yaml
.github/: dependabot.yaml
.github/scripts/: coverage-badge.sh
.github/workflows/: ci.yaml  codeql.yaml  release.yaml
ado_template_tracker/: adoption.py  adoption_tracker.py  cli.py  client.py  model.py  print.py  repository_scanner.py  requirements.txt
examples/json/organization/: non-compliant.json  overview.json  source.json  target.json
examples/json/pipeline/: overview.json  source.json
examples/json/project/: non-compliant.json  overview.json  target.json
examples/json/repository/: non-compliant.json  overview.json  target.json
examples/markdown/organization/: non-compliant.md  overview.md  source.md  target.md
examples/markdown/pipeline/: non-compliant.md  overview.md  source.md  target.md
examples/markdown/project/: non-compliant.md  overview.md  source.md  target.md
examples/markdown/repository/: non-compliant.md  overview.md  source.md  target.md
examples/outputs/json/organization/all/: non-compliant.json  overview.json  source.json  target.json
examples/outputs/json/organization/any/: non-compliant.json  overview.json  target.json
examples/outputs/json/organization/majority/: non-compliant.json  overview.json  target.json
examples/outputs/json/pipeline/all/: overview.json
examples/outputs/json/pipeline/any/: non-compliant.json  overview.json  (+1 more)
examples/outputs/markdown/organization/: non-compliant.md  overview.md  target.md
examples/outputs/markdown/pipeline/: non-compliant.md  overview.md  target.md
examples/outputs/markdown/project/: non-compliant.md  overview.md  target.md
examples/outputs/markdown/repository/: overview.md  target.md
examples/pipeline/: track-pipeline-library-adoption.yaml
examples/plain/organization/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/plain/pipeline/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/plain/project/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/plain/repository/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/rich/organization/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/rich/pipeline/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/rich/project/: non-compliant.txt  overview.txt  source.txt  target.txt
examples/rich/repository/: non-compliant.txt  overview.txt  source.txt  target.txt
src/ado_template_tracker/: __init__.py  __main__.py
src/ado_template_tracker/cli/: __init__.py  commands.py  printer.py
src/ado_template_tracker/core/: __init__.py  adoption.py  client.py  exceptions.py  models.py
src/ado_template_tracker/utils/: __init__.py  scanner.py
tests/cli/: test_commands.py  test_printer.py
tests/core/: test_adoption.py  test_client.py  test_models.py
tests/utils/: test_scanner.py
(+147 files in other folders)
